JDK 10 migration